--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="project-card">
                     <div>
                         <p>July 15 2023</p>
-                        <h4>Brogram</h4>
+                        <h4>Program</h4>
                         <div class="tech-list">
                             <div class="card-button-secondary">
                                 <p>ReactJS</p>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="img-div">
-                        <img class="big-img" src="/public/brogram.png" alt="kalyan-thumbnail"/>
+                        <img class="big-img" src="https://github.com/kalyan-git-repo/1_web_portfolio/blob/master/public/brogram.png?raw=true" alt="kalyan-thumbnail"/>
                     </div>
                 </div>
 
@@ -123,7 +123,7 @@
                         </div>   
                     </div>
                     <div class="img-div">
-                        <img class="big-img" src="/public/kalyanstore.png" alt="kalyan-thumbnail"/>
+                        <img class="big-img" src="https://github.com/kalyan-git-repo/1_web_portfolio/blob/master/public/kalyanstore.png?raw=true" alt="kalyan-thumbnail"/>
                     </div>
                 </div>
 
@@ -150,7 +150,7 @@
                         </div> 
                     </div>
                     <div class="img-div">
-                        <img class="big-img" src="/public/expenny.png" alt="kalyan-thumbnail"/>
+                        <img class="big-img" src="https://github.com/kalyan-git-repo/1_web_portfolio/blob/master/public/expenny.png?raw=true" alt="kalyan-thumbnail"/>
                     </div>
                     </div>
                 </div>
