--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <p>Software Developer</p>
             </div>
             <h5 class="intro-description">
-                An elctrical engineer by qualification and a software developer by trade. Based in india, i love to do yoga, developing python, ai/ml stuffs and searching to build new application!
+                An electrical & electronics engineer by qualification and a software developer by trade. Based in india, found my passion for working with front and back-end technologies, tools and frameworks including react.js and next.js for building complete full-stack applications, and further explored the potential of the run-time environment like node.js for both client and server side rendering of the applications. consequently created projects to assure the validation of my full-stack web desigining skills
             </h5>
             <div class="links-container">
                 <i class="fa-solid link-arrow fa-arrow-right"></i>
@@ -48,25 +48,37 @@
                 <thead>
                     <tr>
                         <th>Area</td>
-                        <th>Technologies</td>
+                        <th>Languages, Tools, Technologies, Frameworks & their Applications</td>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>JavaScript</td>
-                        <td>ReactJS | React Native | NextJS | NodeJS & ExpressJS | Sveltekit | Qwik</td>
+                        <td>Programming Languages</td>
+                        <td>Python | C and C++ | HTML & CSS | JS & Dart | Java & PHP | PostgreSQL</td>
+                    </tr>
+                    <tr>
+                        <td>JavaScript & Java</td>
+                        <td>ReactJS | NextJS | NodeJS & ExpressJS | Prisma ORM | Spring Boot</td>
                     </tr>
                     <tr>
                         <td>Python</td>
-                        <td>Data Analysis | django | Data Visualization</td>
+                        <td>Data Structures & Algorithms | Data Analysis | data extraction & Web Scraping | Data Visualization | Python libraries for AI/ML development </td>
                     </tr>
                     <tr>
-                        <td>Web</td>
-                        <td>TailwindCSS | FantaCSS | Firebase | PostgreSQL | CI/CD | GIT | Docker | Kubernetes | AWS</td>
+                        <td>Full-Stack & Web Design</td>
+                        <td>HTML & CSS | JS | FantaCSS | ReactJS | NextJS | NodeJS & ExpressJS | REST APIs | Prisma ORM | PostgreSQL | Docker | Firebase | Git Hub | Netlify | Amplify </td>
                     </tr>
                     <tr>
-                        <td>Design</td>
-                        <td>Canvas | Pixlr | Microsoft Paint</td>
+                        <td>Desktop, Cloud & Web applications  Database</td>
+                        <td>VSC | Flutter | Eclipse | PostgreSQL & SQLite | GIT | Docker | CI/CD | AWS | FantaCSS | Firebase | PyCharm | Jupyter Notebook | Netlify</td>
+                    </tr>
+                    <tr>
+                        <td>AWS</td>
+                        <td>AWS IoT core | S3 | EC2 & Lambda | IoT Greengrass | Amplify | ECS | AWS Code Build & Deploy | AWS Code Pipeline</td>
+                    </tr>
+                    <tr>
+                        <td>linux</td>
+                        <td>WSL | AI/ML application development & virtualization | AWS IoT Greengrass core software development and edge deployment | Edge to cloud(aws) deployment of cloud formation stack for data visualization</td>
                     </tr>
                 </tbody>
             </table>
