--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                     <div class="img-div">
-                        <img class="big-img" src="https://github.com/kalyan-git-repo/1_web_portfolio/blob/master/public/brogram.png?raw=true" alt="kalyan-thumbnail"/>
+                        <img class="big-img" src="public/program.png" alt="kalyan-thumbnail"/>
                     </div>
                 </div>
 
