--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <tbody>
                     <tr>
                         <td style="color:blue;">Programming Languages</td>
-                        <td>Python | C and C++ | HTML & CSS | JS & Dart | Java & PHP | PostgreSQL</td>
+                        <td>Python | C and C++ | HTML & CSS | JS & Dart | Java & PHP | SQL & NoSQL</td>
                     </tr>
                     <tr>
                         <td style="color:blue;">JavaScript & Java</td>
@@ -68,12 +68,16 @@
                         <td>Data Structures & Algorithms | Data Analysis | data extraction & Web Scraping | Data Visualization | Python libraries for AI/ML development </td>
                     </tr>
                     <tr>
-                        <td style="color:blue;">Full-Stack & Web Design</td>
-                        <td>HTML & CSS | JS | FantaCSS | ReactJS | NextJS | NodeJS & ExpressJS | REST APIs | Prisma ORM | PostgreSQL | Docker | Firebase | Git Hub | Netlify | Amplify </td>
+                        <td style="color:blue;">Full-Stack & Web design Frameworks, Runtime Environment, Web Design tools and technologies</td>
+                        <td>HTML & CSS | JS | Tailwind CSS | ReactJS | NextJS | NodeJS & ExpressJS | Shadcn | Syncfusion | REST APIs | Prisma ORM | SQL & NoSQL | Deployment Containers & Web Deployments</td>
                     </tr>
                     <tr>
-                        <td style="color:blue;">Desktop, Cloud & Web applications, Database</td>
-                        <td>VSC | Flutter | Eclipse | PostgreSQL & SQLite | GIT | Docker | CI/CD | AWS | FantaCSS | Firebase | PyCharm | Jupyter Notebook | Netlify</td>
+                        <td style="color:blue;">Desktop, Web & Cloud Applications & related Technologies</td>
+                        <td>VSC | WebStorm | Flutter | Eclipse | PyCharm | Jupyter Notebook | GIT | Docker | CI/CD | AWS | Netlify | Sevalla</td>
+                    </tr>
+                    <tr>
+                        <td style="color:blue;">Databases -> SQL and NoSQL</td>
+                        <td>PostgreSQL & SQLite | MongoDB | Google Firebase | Appwrite Database | Upstash Redis</td>
                     </tr>
                     <tr>
                         <td style="color:blue;">AWS</td>
